--- a/index.html
+++ b/index.html
@@ -225,6 +225,34 @@
 
         <div class="section-divider"></div>
 
+        <section id="cene">
+            <h2>Cene proizvoda</h2>
+            <table style="width: 100%; border-collapse: collapse; margin-bottom: 20px;">
+                <thead>
+                    <tr>
+                        <th style="border: 1px solid #ccc; padding: 8px; text-align: left;">Proizvod</th>
+                        <th style="border: 1px solid #ccc; padding: 8px; text-align: left;">Cena</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td style="border: 1px solid #ccc; padding: 8px;">Prirodni sokovi</td>
+                        <td style="border: 1px solid #ccc; padding: 8px;">500 RSD</td>
+                    </tr>
+                    <tr>
+                        <td style="border: 1px solid #ccc; padding: 8px;">Džemovi</td>
+                        <td style="border: 1px solid #ccc; padding: 8px;">300 RSD</td>
+                    </tr>
+                    <tr>
+                        <td style="border: 1px solid #ccc; padding: 8px;">Konzervisano voće</td>
+                        <td style="border: 1px solid #ccc; padding: 8px;">400 RSD</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <div class="section-divider"></div>
+
         <section id="usluge">
             <h2>Usluge</h2>
             <p>Pored proizvodnje, nudimo i različite usluge kao što su:</p>
