--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
                 <img src="bio-organska-pica-sokovi-calix (1).jpg" alt="Sokovi" />
                 <img src="dzem.jpg" alt="Džemovi" />
                 <img src="1711356358-shutterstock_1022290516-750x500.jpg" alt="Konzervisano voće" />
-                <img src="novi-sok.jpg" alt="Novi sok" />
-                <img src="salata.jpg" alt="Voćna salata" />
-                <img src="pakovanje.jpg" alt="Pakovanje proizvoda" />
+                <img src="novi-sok.jpg" alt="Sokovi" />
+                <img src="salata.jpg" alt="Džemovi" />
+                <img src="pakovanje.jpg" alt="Konzervisano voće" />
             </div>
         </section>
 
