--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <h2>Recenzije</h2>
             <div class="recenzija">
                 <div class="recenzija-header">
-                    <h3>Jelena T.</h3>
+                    <h3>Marija Radovanović</h3>
                     <div class="zvezde">
                         <span>&#9733;</span>
                         <span>&#9733;</span>
@@ -297,7 +297,7 @@
             </div>
             <div class="recenzija">
                 <div class="recenzija-header">
-                    <h3>Marko S.</h3>
+                    <h3>Murga</h3>
                     <div class="zvezde">
                         <span>&#9733;</span>
                         <span>&#9733;</span>
