--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         <span>&#9733;</span>
                     </div>
                 </div>
-                <p>"Sviđa mi se kvalitet proizvoda, preporučujem svima!"</p>
+                <p>"Medo ker mi poj'o pola ali sigurno ću naručiti još!"</p>
             </div>
         </section>
 
